--- a/index.html
+++ b/index.html
@@ -580,10 +580,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<div class="con">
 										<h3><a href="https://www.netzerocheckout.com" style="text-transform:none">NetZero Checkout</a></h3>
 										<span>Co-Founder</span>
-										<br/>
-										<br/>
-										<p style="color:#fcfcfc;">Entered Pioneer Accelerator</p>
-										<p style="color:#fcfcfc;">Raised 15k from Fortum</p>
+										<div style="margin-top:30px; color:#fcfcfc;">
+										Entered Pioneer Accelerator <br/> Raised 15k from Fortum
+										</div>
 										<p class="icon">
 											<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
 										</p>
@@ -753,7 +752,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										</div>
 										<div style="margin-top:-3px; margin-bottom:15px;" id="form__thankYou"></div>
 										<div class="form-group">
-											<div id="submitButton" type="submit" style="border-radius:30px; margin-left:1px; margin-top:2px; padding:3px;" class="btn btn-primary btn-send-message">Submit</div>
+											<div id="submitButton" type="submit" style="border-radius:30px; margin-left:1px; margin-top:2px; padding:3px;N" class="btn btn-primary btn-send-message">Submit</div>
 										</div>
 									</div>
 								</div>
