--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<span class="colorlib-counter-label">Startups</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="15000" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="27000" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Funding Raised ($)</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
@@ -580,8 +580,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<div class="con">
 										<h3><a href="https://www.netzerocheckout.com" style="text-transform:none">NetZero Checkout</a></h3>
 										<span>Co-Founder</span>
-										<div style="margin-top:30px; color:#fcfcfc;">
-										Entered Pioneer Accelerator <br/> Raised 15k from Fortum
+										<div style="margin-top:45px; color:#fcfcfc;">
+										Founded in August 2020
 										</div>
 										<p class="icon">
 											<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
@@ -596,6 +596,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<div class="con">
 										<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
 										<span>Founder and CEO</span>
+										<div style="margin-top:45px; color:#fcfcfc;">
+										Entered Pioneer's and Fortum's Startup Accelerators <br/> Raised 15k From Fortum, Pioneer and Junction
+										</div>
 										<p class="icon">
 											<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
 										<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -611,6 +614,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<div class="con">
 										<h3><a href="https://www.opendatabase.io">Open Database</a></h3>
 										<span>CEO And Lead Contributor</span>
+										<div style="margin-top:45px; color:#fcfcfc;">
+										Founded in August 2020 <br/>Over 250 Rows of Data Added
+										</div>
 										<p class="icon">
 											<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
 										<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -626,6 +632,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<div class="con">
 										<h3><a href="https://www.netzero.world">NetZero App</a></h3>
 										<span>UX/UI Designer</span>
+										<div style="margin-top:45px; color:#fcfcfc;">
+											Design Front-end for MVP And Created Database <br/> Raised over $12,000 in Funding
+										</div>
 										<p class="icon">
 											<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
 										<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
