--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<span class="colorlib-counter-label">Funding Raised ($)</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="4" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Co-Founders</span>
 						</div>
 					</div>
@@ -597,7 +597,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
 										<span>Founder and CEO</span>
 										<div style="margin-top:45px; color:#fcfcfc;">
-										Entered Pioneer's and Fortum's Startup Accelerators <br/> Raised 15k From Fortum, Pioneer and Junction
+										Entered Pioneer's Startup Accelerators <br/> Raised 15k From Fortum, Pioneer and Junction
 										</div>
 										<p class="icon">
 											<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
