--- a/index.html
+++ b/index.html
@@ -669,17 +669,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://carbonly.org/blogs/s1e1-pilot" class="blog-img"><img src="https://res.cloudinary.com/netzero/image/upload/v1593964232/Screenshot_2020-07-05_at_17.45.00_iclrzm.png" class="img-responsive" alt="Carbonly 🌿 S1E1: Pilot Blog"></a>
+								<a href="https://carbonly.org/blogs/s1e1-pilot" class="blog-img"><img style="border-radius:5px" src="https://res.cloudinary.com/netzero/image/upload/v1593964232/Screenshot_2020-07-05_at_17.45.00_iclrzm.png" class="img-responsive" alt="Carbonly 🌿 S1E1: Pilot Blog"></a>
 								<div class="desc">
 									<span><small>July 5, 2020 </small> | <small> Carbonly </small> | <small> <i class="icon-eye"></i> 53</small></span>
 									<h3><a href="https://carbonly.org/blogs/s1e1-pilot">Carbonly 🌿 S1E1: Pilot</a></h3>
-									<p>A Browser Extension For Tracking 📈 Your Online Carbon Footprint 💨🌿️</p>
+									<p>A Browser Extension For Tracking Your Online Carbon Footprint</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="#" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="Oliver Carmont's Blog"></a>
+								<a href="#" class="blog-img"><img src="images/blog-2.jpg" style="border-radius:5px" class="img-responsive" alt="Oliver Carmont's Blog"></a>
 								<div class="desc">
 									<span><small>October 15, 2020 </small> | <small> Web Design </small> | <small> <i class="icon-eye"></i> 0</small></span>
 									<h3><a href="#">Coming Soon...</a></h3>
