--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Pioneer</h1>
-												<h2>I've Founded 4 Social Startups For a Better Future.</h2>
+												<h2>I've Worked With 4 Social Startups Fighting For a Better Future</h2>
 												<p><a href="#work" class="btn btn-primary btn-learn">View Projects <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
