--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Oliver Carmont</strong>. I'm Spanish and Australian, but have lived the majority of my life in Amsterdam, The Netherlands. With a pioneering mindeset and eager to fight for a change, I've worked with several social startups in the attempt to create a better world. Want to collaborate? Just let me know!</p>
+										<p><strong>Hi I'm Oliver Carmont</strong>. I'm Spanish and Australian, but have lived the majority of my life in Amsterdam, The Netherlands. With a pioneering mindeset and eager to fight for a change, I've worked with several social startups in the attempt to create a better world. Wanna' collaborate? Let me know!</p>
 									</div>
 								</div>
 							</div>
