--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-1.jpg);">
+							<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="https://www.netzerocheckout.com" style="text-transform:none">NetZero Checkout</a></h3>
@@ -593,7 +593,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-2.jpg);">
+							<div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
@@ -611,7 +611,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/img-3.jpg);">
+							<div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;" >
 								<div class="desc">
 									<div class="con">
 										<h3><a href="https://www.opendatabase.io">Open Database</a></h3>
@@ -629,7 +629,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-							<div class="project" style="background-image: url(images/img-4.jpg);">
+							<div class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="https://www.netzero.world">NetZero App</a></h3>
