--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<h3><a href="https://www.netzerocheckout.com" style="text-transform:none">NetZero Checkout</a></h3>
 										<span>Co-Founder</span>
 										<div style="margin-top:45px; color:#fcfcfc;">
-										Founded in August 2020
+										Founded in August 2020 <br/> Currently in Development
 										</div>
 										<p class="icon">
 											<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
@@ -599,7 +599,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
 										<span>Founder and CEO</span>
 										<div style="margin-top:45px; color:#fcfcfc;">
-										Entered Pioneer's Startup Accelerators <br/> Raised 15k From Fortum, Pioneer and Junction
+										Entered Pioneer's Startup Accelerators <br/> Raised $15k From Fortum, Pioneer and Junction
 										</div>
 										<p class="icon">
 											<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
@@ -635,7 +635,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<h3><a href="https://www.netzero.world">NetZero App</a></h3>
 										<span>UX/UI Designer</span>
 										<div style="margin-top:45px; color:#fcfcfc;">
-											Design Front-end for MVP And Created Database <br/> Raised over $12,000 in Funding
+											Design Front-end for MVP And Created Database <br/> Raised over $12k in Funding
 										</div>
 										<p class="icon">
 											<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
