--- a/index.html
+++ b/index.html
@@ -575,8 +575,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<p class="work-menu"><span><a href="#" class="active">Startups</a></span> <span><a href="#">Projects</a></span> <span><a href="#">Designs</a></span> <span><a href="#">Other</a></span></p>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+					<div class="row" style="border-radius:10px;">
+						<a href="https://www.netzerocheckout.com">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
 							<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
 								<div class="desc">
 									<div class="con">
@@ -591,6 +592,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									</div>
 								</div>
 							</div>
+						</a>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
