--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-						   					<h1>Hi! <br>I'm Oliver</h1>
-						   					<h2>A UI/UX Designer in Amsterdam</h2>
+						   					<h1 style="color:#fff">Hi! <br>I'm Oliver</h1>
+						   					<h2 style="color:#fff">A UI/UX Designer in Amsterdam</h2>
 												<!--<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>-->
-												<p><a href="#work" class="btn btn-primary btn-learn">View Projects <i class="icon-briefcase3"></i></a></p>
+												<p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
