--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 						   					<h1 style="color:#fff">Hi! <br>I'm Oliver</h1>
 						   					<h2 style="color:#fff">A UI/UX Designer in Amsterdam</h2>
 												<!--<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>-->
-												<p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
+												<p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -135,9 +135,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>I am <br>a Pioneer</h1>
-												<h2>I've Worked With 4 Social Startups Fighting For a Better Future</h2>
-												<p><a href="#work" class="btn btn-primary btn-learn">View Projects <i class="icon-briefcase3"></i></a></p>
+						   					<h1 style="color:#fff;">I am <br>a Pioneer</h1>
+												<h2 style="color:#fff;">I've Worked With 4 Social Startups Fighting For a Better Future</h2>
+												<p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
