--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<p class="work-menu"><span><a href="#" class="active">Startups</a></span> <span><a href="#">Projects</a></span> <span><a href="#">Designs</a></span> <span><a href="#">Other</a></span></p>
+							<p class="work-menu"><span><a href="#" class="active">Startups</a></span> <span><a style="color:#999">Projects</a></span> <span><a href="#">Designs</a></span> <span><a href="#">Other</a></span></p>
 						</div>
 					</div>
 					<div class="row" style="border-radius:10px;">
@@ -656,7 +656,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box">
-							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
+					<!--		<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>-->
 						</div>
 					</div>
 				</div>
