--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1 style="color:#fff;">I am <br>a Pioneer</h1>
+						   					<h1 style="color:#fff;">I'm <br>a Pioneer</h1>
 												<h2 style="color:#fff;">I've Worked With 4 Social Startups Fighting For a Better Future</h2>
 												<p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
 											</div>
