--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<p class="work-menu"><span><a href="#" class="active">Startups</a></span> <span><a style="color:#aaa">Projects</a></span> <span><a href="#">Designs</a></span> <span><a href="#">Other</a></span></p>
+							<p class="work-menu"><span><a href="#" class="active">Startups</a></span> <span><a style="color:#aaa">Projects</a></span> <span><a style="color:#aaa">Designs</a></span> <span><a style="color:#aaa">Other</a></span></p>
 						</div>
 					</div>
 					<div class="row" style="border-radius:10px;">
