--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Jackson Template</title>
+	<title>Oliver Carmont</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -56,7 +56,7 @@
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
 <script type="text/javascript">
    (function(){
-      emailjs.init("user_2Lld0oHqOxtCVpyJ9ehBS");
+    emailjs.init('user_h39VxjpWJD2CkR1zHGpkC')
    })();
 </script>
 
@@ -794,13 +794,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 
 	var template_params = {
-   "from_name": name,
-   "to_email": email,
-   "message_html": message,
+   "name": name,
+   "email": email,
+   "message": message,
 	}
 
 	var service_id = "default_service";
-	var template_id = "template_QvKeiQBr";
+	var template_id = "template_7qzi0yl";
 	emailjs.send(service_id, template_id, template_params);
 
 	});
