--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">oliver@netzerocheckout.com</a></p>
+									<p><a href="#">team@carbonly.org</a></p>
 								</div>
 							</div>
 
@@ -743,7 +743,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">+31649946989</a></p>
+									<p><a href="tel://">X</a></p>
 								</div>
 							</div>
 						</div>
