--- a/index.html
+++ b/index.html
@@ -575,43 +575,44 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<p class="work-menu"><span><a href="" class="active">Startups</a></span> <span><a style="color:#aaa">Projects</a></span> <span><a style="color:#aaa">Designs</a></span> <span><a style="color:#aaa">Other</a></span></p>
 						</div>
 					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
+							<div class="desc">
+								<div class="con">
+									<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
+									<span>Founder and CEO</span>
+									<div style="margin-top:45px; color:#fcfcfc;">
+									Entered Pioneer's Startup Accelerators <br/> Raised $15k From Fortum, Pioneer and Junction
+									</div>
+									<p class="icon">
+										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
+									<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+										<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="row" style="border-radius:10px;">
-						<a href="https://www.netzerocheckout.com">
+						<a href="https://www.netzero.world">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
 							<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://www.netzerocheckout.com" style="text-transform:none">NetZero Checkout</a></h3>
-										<span>Co-Founder</span>
-										<div style="margin-top:45px; color:#fcfcfc;">
-										Founded in August 2020 <br/> Currently in Development
+										<h3><a href="https://www.netzerocheckout.com" style="text-transform:none">NetZero</a></h3>
+										<span>Co-Founder & Head of Product</span>
+										<div style="margin-top:45px; color:#fcfcfc;"><a><u>
+										Founded in August 2020 <br/> Currently in Development</u></a>
 										</div>
-										<p class="icon">
+										<!--<p class="icon">
 											<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
-										</p>
+										</p>-->
 									</div>
 								</div>
 							</div>
 						</a>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
-										<span>Founder and CEO</span>
-										<div style="margin-top:45px; color:#fcfcfc;">
-										Entered Pioneer's Startup Accelerators <br/> Raised $15k From Fortum, Pioneer and Junction
-										</div>
-										<p class="icon">
-											<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
-										<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
+
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
 							<div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;" >
 								<div class="desc">
@@ -621,11 +622,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<div style="margin-top:45px; color:#fcfcfc;">
 										Founded in August 2020 <br/>Over 250 Rows of Data Added
 										</div>
-										<p class="icon">
+									<!--	<p class="icon">
 											<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
+
+										</p>-->
 										<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
-										</p>
 									</div>
 								</div>
 							</div>
@@ -639,11 +641,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<div style="margin-top:45px; color:#fcfcfc;">
 											Design Front-end for MVP And Created Database <br/> Raised over $12k in Funding
 										</div>
-										<p class="icon">
+									<!--	<p class="icon">
 											<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
-										<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
-										</p>
+
+										</p>-->
 									</div>
 								</div>
 							</div>
