--- a/index.html
+++ b/index.html
@@ -593,64 +593,66 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							</div>
 						</div>
 					</div>
-					<div class="row" style="border-radius:10px;">
-						<a href="https://www.netzero.world">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
-							<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="https://www.netzerocheckout.com" style="text-transform:none">NetZero</a></h3>
-										<span>Co-Founder & Head of Product</span>
-										<div style="margin-top:45px; color:#fcfcfc;"><a><u>
-										Founded in August 2020 <br/> Currently in Development</u></a>
-										</div>
-										<!--<p class="icon">
-											<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
-										</p>-->
-									</div>
-								</div>
-							</div>
-						</a>
-						</div>
 
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;" >
-								<div class="desc">
-									<div class="con">
-										<h3><a href="https://www.opendatabase.io">Open Database</a></h3>
-										<span>CEO And Lead Contributor</span>
-										<div style="margin-top:45px; color:#fcfcfc;">
-										Founded in August 2020 <br/>Over 250 Rows of Data Added
-										</div>
-									<!--	<p class="icon">
-											<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
-
-										</p>-->
-										<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+						<div class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
+							<div class="desc">
+								<div class="con">
+									<h3><a href="https://www.netzero.world">NetZero App</a></h3>
+									<span>UX/UI Designer</span>
+									<div style="margin-top:45px; color:#fcfcfc;">
+										Design Front-end for MVP And Created Database <br/> Raised over $12k in Funding
 									</div>
+								<!--	<p class="icon">
+										<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
+
+									</p>-->
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-							<div class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="https://www.netzero.world">NetZero App</a></h3>
-										<span>UX/UI Designer</span>
-										<div style="margin-top:45px; color:#fcfcfc;">
-											Design Front-end for MVP And Created Database <br/> Raised over $12k in Funding
-										</div>
-									<!--	<p class="icon">
-											<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
+					</div>
 
-										</p>-->
+						<div class="row" style="border-radius:10px;">
+							<a href="https://www.netzerocheckout.com">
+							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
+								<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
+									<div class="desc">
+										<div class="con">
+											<h3><a href="https://www.netzerocheckout.com" style="text-transform:none">NetZero</a></h3>
+											<span>Co-Founder & Head of Product</span>
+											<div style="margin-top:45px; color:#fcfcfc;">
+											Founded in August 2020 <br/> Currently in Development
+											</div>
+
+											<a style="margin-top:45px; color:#fcfcfc !important; text-decoration:underline;">CLICK HERE TO SEE</a>
+											<!--<p class="icon">
+												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
+											</p>-->
+										</div>
+									</div>
+								</div>
+							</a>
+							</div>
+
+							<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
+								<div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;" >
+									<div class="desc">
+										<div class="con">
+											<h3><a href="https://www.opendatabase.io">Open Database</a></h3>
+											<span>CEO And Lead Contributor</span>
+											<div style="margin-top:45px; color:#fcfcfc;">
+											Founded in August 2020 <br/>Over 250 Rows of Data Added
+											</div>
+										<!--	<p class="icon">
+												<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
+
+											</p>-->
+											<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+												<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-
-
 
 
 
