--- a/index.html
+++ b/index.html
@@ -620,11 +620,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<div class="con">
 											<h3><a href="https://www.netzerocheckout.com" style="text-transform:none">NetZero</a></h3>
 											<span>Co-Founder & Head of Product</span>
-											<div style="margin-top:45px; color:#fcfcfc;">
+											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
 											Founded in August 2020 <br/> Currently in Development
 											</div>
 
-											<a style="margin-top:45px; color:#fcfcfc !important; text-decoration:underline;">CLICK HERE TO SEE</a>
+											<a href="https://www.netzerocheckout.com" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
 											<!--<p class="icon">
 												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
 											</p>-->
