--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<span class="colorlib-counter-label">Startups</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="13000" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="12000" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Funding Raised ($)</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
@@ -584,11 +584,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<div style="margin-top:45px; color:#fcfcfc;">
 									Entered Pioneer's Startup Accelerators <br/> Raised $15k From Fortum, Pioneer and Junction
 									</div>
-									<p class="icon">
+
+									<a href="https://www.carbonly.org" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+								<!--	<p class="icon">
 										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
+
+									</p>-->
 									<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
 										<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
-									</p>
 								</div>
 							</div>
 						</div>
@@ -603,6 +606,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<div style="margin-top:45px; color:#fcfcfc;">
 										Design Front-end for MVP And Created Database <br/> Raised over $12k in Funding
 									</div>
+
+									<a href="https://www.opendatabase.io" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
 								<!--	<p class="icon">
 										<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
 
@@ -643,6 +648,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 											<div style="margin-top:45px; color:#fcfcfc;">
 											Founded in August 2020 <br/>Over 250 Rows of Data Added
 											</div>
+
+
+											<a href="https://www.opendatabase.io" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
 										<!--	<p class="icon">
 												<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
 
