--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								<div class="con">
 									<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
 									<span>Founder and CEO</span>
-									<div style="margin-top:45px; color:#fcfcfc;">
+									<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
 									Entered Pioneer's Startup Accelerators <br/> Raised $15k From Fortum, Pioneer and Junction
 									</div>
 
@@ -603,8 +603,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								<div class="con">
 									<h3><a href="https://www.netzero.world">NetZero App</a></h3>
 									<span>UX/UI Designer</span>
-									<div style="margin-top:45px; color:#fcfcfc;">
-										Design Front-end for MVP And Created Database <br/> Raised over $12k in Funding
+									<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+										Design Front-end for MVP And Created NetZero's Carbon Database <br/>
 									</div>
 
 									<a href="https://www.opendatabase.io" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
@@ -645,8 +645,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<div class="con">
 											<h3><a href="https://www.opendatabase.io">Open Database</a></h3>
 											<span>CEO And Lead Contributor</span>
-											<div style="margin-top:45px; color:#fcfcfc;">
-											Founded in August 2020 <br/>Over 250 Rows of Data Added
+											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+											Founded in August 2020 <br/>Over 450 Rows of Data Added
 											</div>
 
 
