--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										Design Front-end for MVP And Created NetZero's Carbon Database <br/>
 									</div>
 
-									<a href="https://www.opendatabase.io" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+									<a href="https://www.netzero.world" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
 								<!--	<p class="icon">
 										<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
 
