--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 											</div>
 
 
-											<a href="https://www.opendatabase.io" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+											<a href="" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Website is Down 😢</a>
 										<!--	<p class="icon">
 												<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
 
