--- a/index.html
+++ b/index.html
@@ -618,18 +618,18 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					</div>
 
 						<div class="row" style="border-radius:10px;">
-							<a href="https://www.netzerocheckout.com">
+							<a href="https://www.app.netzero.world">
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
 								<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
 									<div class="desc">
 										<div class="con">
-											<h3><a href="https://www.netzerocheckout.com" style="text-transform:none">NetZero</a></h3>
+											<h3><a href="https://www.app.netzero.world" style="text-transform:none">NetZero</a></h3>
 											<span>Co-Founder & Head of Product</span>
 											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
 											Founded in August 2020 <br/> Currently in Development
 											</div>
 
-											<a href="https://www.netzerocheckout.com" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+											<a href="https://www.app.netzero.world" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
 											<!--<p class="icon">
 												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
 											</p>-->
