--- a/index.html
+++ b/index.html
@@ -601,13 +601,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 						<div class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
 							<div class="desc">
 								<div class="con">
-									<h3><a href="https://www.netzero.world">NetZero App</a></h3>
+									<h3><a href="https://netzero.world/">NetZero App</a></h3>
 									<span>UX/UI Designer</span>
 									<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
 										Design Front-end for MVP And Created NetZero's Carbon Database <br/>
 									</div>
 
-									<a href="https://www.netzero.world" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+									<a href="https://netzero.world/" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
 								<!--	<p class="icon">
 										<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
 
