--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
 									<span>Founder and CEO</span>
 									<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-									Entered Pioneer's Startup Accelerators <br/> Raised $15k From Fortum, Pioneer and Junction
+									Entered Pioneer's Startup Accelerators <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
 									</div>
 
 									<a href="https://www.carbonly.org" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
