--- a/index.html
+++ b/index.html
@@ -618,18 +618,18 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					</div>
 
 						<div class="row" style="border-radius:10px;">
-							<a href="https://www.app.netzero.world">
+							<a href="https://app.netzero.world/checkout.html">
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
 								<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
 									<div class="desc">
 										<div class="con">
-											<h3><a href="https://www.app.netzero.world" style="text-transform:none">NetZero</a></h3>
+											<h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NetZero</a></h3>
 											<span>Co-Founder & Head of Product</span>
 											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
 											Founded in August 2020 <br/> Currently in Development
 											</div>
 
-											<a href="https://www.app.netzero.world" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+											<a href="https://app.netzero.world/checkout.html" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
 											<!--<p class="icon">
 												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
 											</p>-->
@@ -643,14 +643,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								<div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;" >
 									<div class="desc">
 										<div class="con">
-											<h3><a href="https://www.opendatabase.io">Open Database</a></h3>
+											<h3><a href="https://open-database-app.herokuapp.com/landing#">Open Database</a></h3>
 											<span>CEO And Lead Contributor</span>
 											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
 											Founded in August 2020 <br/>Over 450 Rows of Data Added
 											</div>
 
 
-											<a href="" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Website is Down 😢</a>
+											<a href="https://open-database-app.herokuapp.com/landing#" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
 										<!--	<p class="icon">
 												<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
 
