--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">Read</span>
-							<h2 class="colorlib-heading">Recent Blog</h2>
+							<h2 class="colorlib-heading">Blog</h2>
 						</div>
 					</div>
 					<div class="row">
