--- a/index.html
+++ b/index.html
@@ -623,10 +623,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
 									<div class="desc">
 										<div class="con">
-											<h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NetZero</a></h3>
+											<h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NetZero Checkout</a></h3>
 											<span>Co-Founder & Head of Product</span>
 											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-											Founded in August 2020 <br/> Currently in Development
+											Founded in October 2020 <br/> Currently Gathering Letters of Intent
 											</div>
 
 											<a href="https://app.netzero.world/checkout.html" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
