--- a/index.html
+++ b/index.html
@@ -643,14 +643,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								<div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;" >
 									<div class="desc">
 										<div class="con">
-											<h3><a href="https://open-database-app.herokuapp.com/landing#">Open Database</a></h3>
+											<h3><a href="http://www.opendatabase.io/landing">Open Database</a></h3>
 											<span>CEO And Lead Contributor</span>
 											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
 											Founded in August 2020 <br/>Over 450 Rows of Data Added
 											</div>
 
 
-											<a href="https://open-database-app.herokuapp.com/landing#" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+											<a href="http://www.opendatabase.io/landing" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
 										<!--	<p class="icon">
 												<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
 
