--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
+	<meta property='og:title' content="Oliver Carmont's Personal Website" />
+<meta property='og:image' content='https://res.cloudinary.com/netzero/image/upload/v1609960042/Screenshot_2020-11-13_at_15.31.05_o5jbcl.png'/>
+<meta property='og:description' content="Oliver Carmont's Personal Website"/>
+<meta property='og:url' content='https://www.olivercarmont.com'/>
+
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
