--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Oliver Carmont</a></h1>
-				<span class="position"><a href="#">UI Designer</a> in Amsterdam</span>
+				<span class="position"><a href="#">Web Developer</a> in Amsterdam</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
-						<li><a href="#" data-nav-section="services">Skills</a></li>
+						<li><a href="#" data-nav-section="work">Projects</a></li>
+						<li><a href="#" data-nav-section="services">Expertise</a></li>
 						<!--<li><a href="#" data-nav-section="skills">Skills</a></li>-->
 					<!--	<li><a href="#" data-nav-section="education">Education</a></li>-->
 					<!--	<li><a href="#" data-nav-section="experience">Experience</a></li> -->
-						<li><a href="#" data-nav-section="work">Work</a></li>
 						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
@@ -205,6 +205,105 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 				</div>
 			</section>
 
+			<section class="colorlib-work" data-section="work" id="work">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">My Projects</span>
+							<h2 class="colorlib-heading animate-box">Recent Work</h2>
+						</div>
+					</div>
+					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+						<div class="col-md-12">
+							<p class="work-menu"><span><a href="" class="active">Startups</a></span> <span><a style="color:#aaa">Projects</a></span> <span><a style="color:#aaa">Designs</a></span> <span><a style="color:#aaa">Other</a></span></p>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
+							<div class="desc">
+								<div class="con">
+									<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
+									<span>Founder and CEO</span>
+									<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+									Entered Pioneer's Startup Accelerators <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
+									</div>
+
+									<a href="https://www.carbonly.org" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+								<!--	<p class="icon">
+										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
+
+									</p>-->
+									<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+										<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+						<div class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
+							<div class="desc">
+								<div class="con">
+									<h3><a href="https://netzero.world/">NetZero App</a></h3>
+									<span>UX/UI Developer</span>
+									<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+										Design Front-end for MVP And Created NetZero's Carbon Database <br/>
+									</div>
+
+									<a href="https://netzero.world/" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+								<!--	<p class="icon">
+										<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
+
+									</p>-->
+								</div>
+							</div>
+						</div>
+					</div>
+
+						<div class="row" style="border-radius:10px;">
+							<a href="https://app.netzero.world/checkout.html">
+							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
+								<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
+									<div class="desc">
+										<div class="con">
+											<h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NetZero Checkout</a></h3>
+											<span>Co-Founder & Head of Product</span>
+											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+											Founded in October 2020 <br/> Currently Gathering Letters of Intent
+											</div>
+
+											<a href="https://app.netzero.world/checkout.html" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+											<!--<p class="icon">
+												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
+											</p>-->
+										</div>
+									</div>
+								</div>
+							</a>
+							</div>
+
+							<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
+								<div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;" >
+									<div class="desc">
+										<div class="con">
+											<h3><a href="http://www.opendatabase.io/landing">Open Database</a></h3>
+											<span>CEO And Lead Contributor</span>
+											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+											Founded in August 2020 <br/>Over 450 Rows of Data Added
+											</div>
+
+
+											<a href="http://www.opendatabase.io/landing" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+										<!--	<p class="icon">
+												<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
+
+											</p>-->
+											<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+												<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
+										</div>
+									</div>
+								</div>
+							</div>
 
 
 			<section class="colorlib-services" data-section="services">
@@ -567,105 +666,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 				</div>
 			</section>-->
 
-			<section class="colorlib-work" data-section="work" id="work">
-				<div class="colorlib-narrow-content">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">My Projects</span>
-							<h2 class="colorlib-heading animate-box">Recent Work</h2>
-						</div>
-					</div>
-					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-						<div class="col-md-12">
-							<p class="work-menu"><span><a href="" class="active">Startups</a></span> <span><a style="color:#aaa">Projects</a></span> <span><a style="color:#aaa">Designs</a></span> <span><a style="color:#aaa">Other</a></span></p>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-						<div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
-							<div class="desc">
-								<div class="con">
-									<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
-									<span>Founder and CEO</span>
-									<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-									Entered Pioneer's Startup Accelerators <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
-									</div>
 
-									<a href="https://www.carbonly.org" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
-								<!--	<p class="icon">
-										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
-
-									</p>-->
-									<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-										<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-						<div class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
-							<div class="desc">
-								<div class="con">
-									<h3><a href="https://netzero.world/">NetZero App</a></h3>
-									<span>UX/UI Designer</span>
-									<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-										Design Front-end for MVP And Created NetZero's Carbon Database <br/>
-									</div>
-
-									<a href="https://netzero.world/" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
-								<!--	<p class="icon">
-										<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
-
-									</p>-->
-								</div>
-							</div>
-						</div>
-					</div>
-
-						<div class="row" style="border-radius:10px;">
-							<a href="https://app.netzero.world/checkout.html">
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
-								<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
-									<div class="desc">
-										<div class="con">
-											<h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NetZero Checkout</a></h3>
-											<span>Co-Founder & Head of Product</span>
-											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-											Founded in October 2020 <br/> Currently Gathering Letters of Intent
-											</div>
-
-											<a href="https://app.netzero.world/checkout.html" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
-											<!--<p class="icon">
-												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
-											</p>-->
-										</div>
-									</div>
-								</div>
-							</a>
-							</div>
-
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-								<div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;" >
-									<div class="desc">
-										<div class="con">
-											<h3><a href="http://www.opendatabase.io/landing">Open Database</a></h3>
-											<span>CEO And Lead Contributor</span>
-											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-											Founded in August 2020 <br/>Over 450 Rows of Data Added
-											</div>
-
-
-											<a href="http://www.opendatabase.io/landing" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
-										<!--	<p class="icon">
-												<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
-
-											</p>-->
-											<!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-												<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
-										</div>
-									</div>
-								</div>
-							</div>
 
 
 
@@ -697,7 +698,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
+					<!--	<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
 								<a href="#" class="blog-img"><img src="images/blog-2.jpg" style="border-radius:10px" class="img-responsive" alt="Oliver Carmont's Blog"></a>
 								<div class="desc">
@@ -717,7 +718,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</div>
 							</div>
 						</div>
-					</div>
+					</div>-->
 					<div class="row">
 						<div class="col-md-12 animate-box">
 							<!--<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>-->
