--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
 						<li><a href="#" data-nav-section="work">Projects</a></li>
-						<li><a href="#" data-nav-section="services">Expertise</a></li>
+						<li><a href="#" data-nav-section="services">Skills</a></li>
 						<!--<li><a href="#" data-nav-section="skills">Skills</a></li>-->
 					<!--	<li><a href="#" data-nav-section="education">Education</a></li>-->
 					<!--	<li><a href="#" data-nav-section="experience">Experience</a></li> -->
@@ -205,12 +205,38 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 				</div>
 			</section>
 
+			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
+				<div class="overlay"></div>
+				<div class="colorlib-narrow-content">
+					<div class="row">
+					</div>
+					<div class="row">
+						<div class="col-md-3 text-center animate-box">
+							<span class="colorlib-counter js-counter" data-from="0" data-to="21600" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Lines of Code</span>
+						</div>
+						<div class="col-md-3 text-center animate-box">
+							<span class="colorlib-counter js-counter" data-from="0" data-to="3" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Startups</span>
+						</div>
+						<div class="col-md-3 text-center animate-box">
+							<span class="colorlib-counter js-counter" data-from="0" data-to="12000" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Funding Raised ($)</span>
+						</div>
+						<div class="col-md-3 text-center animate-box">
+							<span class="colorlib-counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Co-Founders</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<section class="colorlib-work" data-section="work" id="work">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">My Projects</span>
-							<h2 class="colorlib-heading animate-box">Recent Work</h2>
+							<span class="heading-meta">Recent Work</span>
+							<h2 class="colorlib-heading animate-box">My Projects</h2>
 						</div>
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
@@ -304,6 +330,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									</div>
 								</div>
 							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12 animate-box">
+						<!--		<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>-->
+							</div>
+						</div>
+					</div>
+				</section>
 
 
 			<section class="colorlib-services" data-section="services">
@@ -385,31 +419,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 				</div>
 			</section>
 
-			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
-				<div class="overlay"></div>
-				<div class="colorlib-narrow-content">
-					<div class="row">
-					</div>
-					<div class="row">
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="21600" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Lines of Code</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="3" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Startups</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="12000" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Funding Raised ($)</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Co-Founders</span>
-						</div>
-					</div>
-				</div>
-			</div>
+
 
 		<!--	<section class="colorlib-skills" data-section="skills">
 				<div class="colorlib-narrow-content">
@@ -670,14 +680,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 
 
-					</div>
-					<div class="row">
-						<div class="col-md-12 animate-box">
-					<!--		<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>-->
-						</div>
-					</div>
-				</div>
-			</section>
+
 
 			<section class="colorlib-blog" data-section="blog">
 				<div class="colorlib-narrow-content">
@@ -698,7 +701,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</div>
 							</div>
 						</div>
-					<!--	<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
 								<a href="#" class="blog-img"><img src="images/blog-2.jpg" style="border-radius:10px" class="img-responsive" alt="Oliver Carmont's Blog"></a>
 								<div class="desc">
@@ -718,7 +721,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</div>
 							</div>
 						</div>
-					</div>-->
+					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box">
 							<!--<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>-->
