--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 			  	</div>
 			</section>
 
+			<div style="margin-top:-30px"></div>
+
 			<section class="colorlib-about" data-section="about">
 				<div class="colorlib-narrow-content">
 					<div class="row">
