--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 						<div class="row" style="border-radius:10px;">
 							<a href="https://app.netzero.world/checkout.html">
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
-								<div class="project" style="background-image: url(https://res.cloudinary.com/netzero/image/upload/v1600793176/Hnet-image_jfgnvc.gif); border-radius:10px;">
+								<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
 									<div class="desc">
 										<div class="con">
 											<h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NetZero Checkout</a></h3>
