--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									Entered Pioneer's Startup Accelerators <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
 									</div>
 
-									<a href="https://www.carbonly.org" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+									<a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
+									
 								<!--	<p class="icon">
 										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
 
@@ -278,7 +279,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										Design Front-end for MVP And Created NetZero's Carbon Database <br/>
 									</div>
 
-									<a href="https://netzero.world/" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+									<a href="https://netzero.world/" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
 								<!--	<p class="icon">
 										<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
 
@@ -296,11 +297,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<div class="con">
 											<h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NetZero Checkout</a></h3>
 											<span>Co-Founder & Head of Product</span>
-											<div style="margin-top:55px; color:#fcfcfc; margin-bottom:25px;">
+											<div style="margin-top:65px; color:#fcfcfc; margin-bottom:25px;">
 											Founded in October 2020 <br/> Currently Gathering Letters of Intent
 											</div>
 
-											<a href="https://app.netzero.world/checkout.html" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out <i class="fas fa-arrow-circle-right"></i></a>
+											<a href="https://app.netzero.world/checkout.html" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
 											<!--<p class="icon">
 												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
 											</p>-->
@@ -316,12 +317,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<div class="con">
 											<h3><a href="http://www.opendatabase.io/landing">Open Database</a></h3>
 											<span>CEO And Lead Contributor</span>
-											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+											<div style="margin-top:65px; color:#fcfcfc; margin-bottom:25px;">
 											Founded in August 2020 <br/>Over 450 Rows of Data Added
 											</div>
 
+											<a href="http://www.opendatabase.io/landing" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
 
-											<a href="http://www.opendatabase.io/landing" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
 										<!--	<p class="icon">
 												<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
 
