--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 			  	</div>
 			</section>
 
-			<div style="margin-top:-30px"></div>
+			<div style="margin-top:-60px; display:block; height:0px;"></div>
 
 			<section class="colorlib-about" data-section="about">
 				<div class="colorlib-narrow-content">
