--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">x</a></p>
+									<p><a href="tel://"></a></p>
 								</div>
 							</div>
 						</div>
