--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<h3><a href="https://netzero.world/">NetZero App</a></h3>
 									<span>UX/UI Developer</span>
 									<div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
-										Design Front-end for MVP And Created NetZero's Carbon Database <br/>
+										Designed Front-end for MVP And Created NetZero's Carbon Database <br/>
 									</div>
 
 									<a href="https://netzero.world/" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
