--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 
 			<div style="text-align:center; align-items:center; float:center; margin-bottom:-8px; margin-top:18px;">
 				<a href="https://www.linkedin.com/in/oliver-carmont/" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="ps:linkedin-alt" data-inline="false"></span></a>
+
+				<a href="https://olivercarmont.medium.com/" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="carbon:logo-medium" data-inline="false"></span></a>
+
 				<a href="https://www.producthunt.com/@oliver_carmont" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="bx:bxl-product-hunt" data-inline="false"></span></a>
 				<a href="https://angel.co/u/ocarmont" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="fa-brands:angellist" data-inline="false"></span></a>
 			</div>
@@ -709,8 +712,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								<a href="#" class="blog-img"><img src="images/blog-2.jpg" style="border-radius:10px" class="img-responsive" alt="Oliver Carmont's Blog"></a>
 								<div class="desc">
 									<span><small>October 15, 2020 </small> | <small> Web Design </small> | <small> <i class="icon-eye"></i> 0</small></span>
-									<h3><a href="#">Coming Soon...</a></h3>
-									<p>There was this one time when I...</p>
+									<h3><a href="#">My Favourite Free Hosting Services (And How to Deploy on Them)</a></h3>
+									<p>How to deploy on Heroku and Netlify.</p>
 								</div>
 							</div>
 						</div>
