--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<div style="text-align:center; align-items:center; float:center; margin-bottom:-8px; margin-top:18px;">
 				<a href="https://www.linkedin.com/in/oliver-carmont/" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="ps:linkedin-alt" data-inline="false"></span></a>
 
-				<a href="https://olivercarmont.medium.com/" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="carbon:logo-medium" data-inline="false"></span></a>
+				<a href="https://olivercarmont.medium.com/" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="bx:bxl-medium" data-inline="false"></span></a>
 
 				<a href="https://www.producthunt.com/@oliver_carmont" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="bx:bxl-product-hunt" data-inline="false"></span></a>
 				<a href="https://angel.co/u/ocarmont" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="fa-brands:angellist" data-inline="false"></span></a>
