--- a/index.html
+++ b/index.html
@@ -709,20 +709,20 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="#" class="blog-img"><img src="images/blog-2.jpg" style="border-radius:10px" class="img-responsive" alt="Oliver Carmont's Blog"></a>
+								<a href="#" class="blog-img"><img src="https://miro.medium.com/max/1400/0*nZOSlreM-2nIz1Tl" style="border-radius:10px" class="img-responsive" alt="Oliver Carmont's Blog"></a>
 								<div class="desc">
-									<span><small>October 15, 2020 </small> | <small> Web Design </small> | <small> <i class="icon-eye"></i> 0</small></span>
-									<h3><a href="#">My Favourite Free Hosting Services (And How to Deploy on Them)</a></h3>
+									<span><small>March 25, 2021 </small> | <small> Web Hosting </small> | <small> <i class="icon-eye"></i> 1</small></span>
+									<h3><a href="https://olivercarmont.medium.com/my-favourite-free-hosting-services-and-how-to-deploy-on-them-21e0c5b04a3">My Favourite Free Hosting Services</a></h3>
 									<p>How to deploy on Heroku and Netlify.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="#" class="blog-img"><img src="images/blog-3.jpg" style="border-radius:10px" class="img-responsive" alt="Oliver Carmont's Blog"></a>
+								<a href="#" class="blog-img"><img src="https://miro.medium.com/max/1400/0*JW3W2ygtqWk9klUw" style="border-radius:10px" class="img-responsive" alt="Oliver Carmont's Blog"></a>
 								<div class="desc">
-									<span><small>December 12, 2020 </small> | <small> Category </small> | <small> <i class="icon-eye"></i> 0</small></span>
-									<h3><a href="#">Coming Soon...</a></h3>
+									<span><small>February 13, 2021 </small> | <small> CSS </small> | <small> <i class="icon-eye"></i> 28</small></span>
+									<h3><a href="https://olivercarmont.medium.com/how-to-make-a-css-element-take-the-full-screen-width-4558f27ae21e">How to Make a CSS Element Take The Full Screen Width</a></h3>
 									<p>There was this one time when I...</p>
 								</div>
 							</div>
