--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								<div class="desc">
 									<span><small>February 13, 2021 </small> | <small> CSS </small> | <small> <i class="icon-eye"></i> 28</small></span>
 									<h3><a href="https://olivercarmont.medium.com/how-to-make-a-css-element-take-the-full-screen-width-4558f27ae21e">How to Make a CSS Element Take The Full Screen Width</a></h3>
-									<p>There was this one time when I...</p>
+									<p>A quick CSS trick to make a stunning website design.</p>
 								</div>
 							</div>
 						</div>
